--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 2:45:12 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 2:46:05 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -145,39 +145,39 @@ body {
       <td>Scottie Scheffler -2
 -2 thru 9</td>
       <td>Cameron Smith -2
--2 thru 10</td>
+-2 thru 11</td>
       <td>Sam Burns -1
 -1 thru 2</td>
       <td>Corey Conners -1
--1 thru 5</td>
-      <td class="greyout leftborder">Viktor Hovland(W) E
+-1 thru 6</td>
+      <td class="greyout leftborder">Tyrrell Hatton -1
+-1 thru 2</td>
+      <td class="greyout">Viktor Hovland(W) E
 Not started</td>
-      <td class="greyout">Tyrrell Hatton E
-E thru 1</td>
     </tr>
     <tr>
       <td class="bigbold">BCREAMED</td>
       <td class="bigbold">-5</td>
       <td>Cameron Smith(W) -2
--2 thru 10</td>
+-2 thru 11</td>
       <td>Scottie Scheffler -2
 -2 thru 9</td>
       <td>Sam Burns -1
 -1 thru 2</td>
       <td>Patrick Cantlay E
-Not started</td>
+E thru 1</td>
       <td class="greyout leftborder">Brooks Koepka E
 Not started</td>
-      <td class="greyout">Louis Oosthuizen +2
-+2 thru 10</td>
+      <td class="greyout">Louis Oosthuizen +3
++3 thru 11</td>
     </tr>
     <tr>
       <td class="bigbold">Barb Wellard</td>
       <td class="bigbold">-5</td>
       <td>Joaquin Niemann -2
--2 thru 10</td>
+-2 thru 11</td>
       <td>Cameron Smith -2
--2 thru 10</td>
+-2 thru 11</td>
       <td>Sam Burns -1
 -1 thru 2</td>
       <td>Jon Rahm(W) E
@@ -191,13 +191,13 @@ Not started</td>
       <td class="bigbold">Luke Watson</td>
       <td class="bigbold">-5</td>
       <td>Cameron Smith(W) -2
--2 thru 10</td>
+-2 thru 11</td>
       <td>Scottie Scheffler -2
 -2 thru 9</td>
       <td>Corey Conners -1
--1 thru 5</td>
+-1 thru 6</td>
       <td>Talor Gooch E
-E thru 13</td>
+E thru 14</td>
       <td class="greyout leftborder">Brooks Koepka E
 Not started</td>
       <td class="greyout">Xander Schauffele E
@@ -209,11 +209,11 @@ Not started</td>
       <td>Scottie Scheffler(W) -2
 -2 thru 9</td>
       <td>Cameron Smith -2
--2 thru 10</td>
+-2 thru 11</td>
       <td>Billy Horschel -1
 -1 thru 1</td>
       <td>Patrick Cantlay E
-Not started</td>
+E thru 1</td>
       <td class="greyout leftborder">Brooks Koepka E
 Not started</td>
       <td class="greyout">Xander Schauffele E
@@ -223,17 +223,17 @@ Not started</td>
       <td class="bigbold">Paxton Watson</td>
       <td class="bigbold">-5</td>
       <td>Cameron Smith(W) -2
--2 thru 10</td>
+-2 thru 11</td>
       <td>Scottie Scheffler -2
 -2 thru 9</td>
       <td>Corey Conners -1
--1 thru 5</td>
-      <td>Russell Henley E
-E thru 5</td>
-      <td class="greyout leftborder">Brooks Koepka E
+-1 thru 6</td>
+      <td>Brooks Koepka E
 Not started</td>
-      <td class="greyout">Will Zalatoris E
+      <td class="greyout leftborder">Will Zalatoris E
 Not started</td>
+      <td class="greyout">Russell Henley +1
++1 thru 6</td>
     </tr>
     <tr>
       <td class="bigbold">Mark MacKave</td>
@@ -241,9 +241,9 @@ Not started</td>
       <td>Scottie Scheffler -2
 -2 thru 9</td>
       <td>Cameron Smith -2
--2 thru 10</td>
+-2 thru 11</td>
       <td>Corey Conners -1
--1 thru 5</td>
+-1 thru 6</td>
       <td>Xander Schauffele(W) E
 Not started</td>
       <td class="greyout leftborder">Viktor Hovland E
@@ -255,17 +255,17 @@ Not started</td>
       <td class="bigbold">Don Shaw</td>
       <td class="bigbold">-4</td>
       <td>Cameron Smith -2
--2 thru 10</td>
+-2 thru 11</td>
       <td>Sam Burns -1
 -1 thru 2</td>
       <td>Corey Conners -1
--1 thru 5</td>
+-1 thru 6</td>
       <td>Jon Rahm(W) E
 Not started</td>
       <td class="greyout leftborder">Xander Schauffele E
 Not started</td>
       <td class="greyout">Tiger Woods E
-E thru 10</td>
+E thru 11</td>
     </tr>
     <tr>
       <td class="bigbold">Albert Selina</td>
@@ -273,7 +273,7 @@ E thru 10</td>
       <td>Scottie Scheffler -2
 -2 thru 9</td>
       <td>Corey Conners -1
--1 thru 5</td>
+-1 thru 6</td>
       <td>Webb Simpson -1
 -1 thru 3</td>
       <td>Jon Rahm(W) E
@@ -289,7 +289,7 @@ Not started</td>
       <td>Scottie Scheffler(W) -2
 -2 thru 9</td>
       <td>Cameron Smith -2
--2 thru 10</td>
+-2 thru 11</td>
       <td>Hideki Matsuyama E
 E thru 10</td>
       <td>Xander Schauffele E
@@ -307,9 +307,9 @@ Not started</td>
       <td>Sam Burns -1
 -1 thru 2</td>
       <td>Corey Conners -1
--1 thru 5</td>
+-1 thru 6</td>
       <td>Patrick Cantlay(W) E
-Not started</td>
+E thru 1</td>
       <td class="greyout leftborder">Viktor Hovland E
 Not started</td>
       <td class="greyout">Jon Rahm E
@@ -319,17 +319,17 @@ Not started</td>
       <td class="bigbold">Team Steve</td>
       <td class="bigbold">-4</td>
       <td>Cameron Smith(W) -2
--2 thru 10</td>
+-2 thru 11</td>
       <td>Scottie Scheffler -2
 -2 thru 9</td>
       <td>Patrick Cantlay E
-Not started</td>
+E thru 1</td>
       <td>Viktor Hovland E
 Not started</td>
       <td class="greyout leftborder">Brooks Koepka E
 Not started</td>
-      <td class="greyout">Shane Lowry +2
-+2 thru 12</td>
+      <td class="greyout">Shane Lowry E
+E thru 13</td>
     </tr>
     <tr>
       <td class="bigbold">Roy Jeffrey B</td>
@@ -337,11 +337,11 @@ Not started</td>
       <td>Scottie Scheffler(W) -2
 -2 thru 9</td>
       <td>Corey Conners -1
--1 thru 5</td>
+-1 thru 6</td>
       <td>Robert MacIntyre -1
 -1 thru 7</td>
       <td>Patrick Cantlay E
-Not started</td>
+E thru 1</td>
       <td class="greyout leftborder">Rory McIlroy E
 Not started</td>
       <td class="greyout">Jon Rahm E
@@ -351,11 +351,11 @@ Not started</td>
       <td class="bigbold">The Dub</td>
       <td class="bigbold">-4</td>
       <td>Cameron Smith(W) -2
--2 thru 10</td>
+-2 thru 11</td>
       <td>Scottie Scheffler -2
 -2 thru 9</td>
       <td>Patrick Cantlay E
-Not started</td>
+E thru 1</td>
       <td>Matthew Fitzpatrick E
 Not started</td>
       <td class="greyout leftborder">Brooks Koepka E
@@ -367,29 +367,29 @@ Not started</td>
       <td class="bigbold">Low Golf IQ</td>
       <td class="bigbold">-4</td>
       <td>Joaquin Niemann -2
--2 thru 10</td>
+-2 thru 11</td>
       <td>Sam Burns -1
 -1 thru 2</td>
       <td>Corey Conners -1
--1 thru 5</td>
-      <td>Viktor Hovland E
+-1 thru 6</td>
+      <td>Shane Lowry(W) E
+E thru 13</td>
+      <td class="greyout leftborder">Viktor Hovland E
 Not started</td>
-      <td class="greyout leftborder">Brian Harman +1
+      <td class="greyout">Brian Harman +1
 +1 thru 16</td>
-      <td class="greyout">Shane Lowry(W) +2
-+2 thru 12</td>
     </tr>
     <tr>
       <td class="bigbold">Hadrian&#39;s Wall</td>
       <td class="bigbold">-3</td>
       <td>Cameron Smith -2
--2 thru 10</td>
+-2 thru 11</td>
       <td>Corey Conners -1
--1 thru 5</td>
+-1 thru 6</td>
       <td>Jon Rahm(W) E
 Not started</td>
       <td>Patrick Cantlay E
-Not started</td>
+E thru 1</td>
       <td class="greyout leftborder">Viktor Hovland E
 Not started</td>
       <td class="greyout">Will Zalatoris E
@@ -399,9 +399,9 @@ Not started</td>
       <td class="bigbold">Santorini Sunrises</td>
       <td class="bigbold">-3</td>
       <td>Cameron Smith -2
--2 thru 10</td>
+-2 thru 11</td>
       <td>Corey Conners(W) -1
--1 thru 5</td>
+-1 thru 6</td>
       <td>Brooks Koepka E
 Not started</td>
       <td>Jon Rahm E
@@ -417,7 +417,7 @@ Not started</td>
       <td>Scottie Scheffler(W) -2
 -2 thru 9</td>
       <td>Corey Conners -1
--1 thru 5</td>
+-1 thru 6</td>
       <td>Jon Rahm E
 Not started</td>
       <td>Xander Schauffele E
@@ -431,7 +431,7 @@ Not started</td>
       <td class="bigbold">Chris Sinclair</td>
       <td class="bigbold">-3</td>
       <td>Corey Conners(W) -1
--1 thru 5</td>
+-1 thru 6</td>
       <td>Daniel Berger -1
 -1 thru 12</td>
       <td>Robert MacIntyre -1
@@ -447,9 +447,9 @@ Not started</td>
       <td class="bigbold">Neil Hardy</td>
       <td class="bigbold">-3</td>
       <td>Cameron Smith(W) -2
--2 thru 10</td>
+-2 thru 11</td>
       <td>Corey Conners -1
--1 thru 5</td>
+-1 thru 6</td>
       <td>Viktor Hovland E
 Not started</td>
       <td>Xander Schauffele E
@@ -463,15 +463,15 @@ Not started</td>
       <td class="bigbold">Bill Hunter</td>
       <td class="bigbold">-3</td>
       <td>Cameron Smith(W) -2
--2 thru 10</td>
+-2 thru 11</td>
       <td>Corey Conners -1
--1 thru 5</td>
+-1 thru 6</td>
       <td>Hideki Matsuyama E
 E thru 10</td>
       <td>Xander Schauffele E
 Not started</td>
       <td class="greyout leftborder">Marc Leishman +1
-+1 thru 3</td>
++1 thru 4</td>
       <td class="greyout">Justin Thomas +2
 +2 thru 10</td>
     </tr>
@@ -479,23 +479,23 @@ Not started</td>
       <td class="bigbold">The Resort</td>
       <td class="bigbold">-3</td>
       <td>Cameron Smith(W) -2
--2 thru 10</td>
+-2 thru 11</td>
       <td>Corey Conners -1
--1 thru 5</td>
+-1 thru 6</td>
       <td>Viktor Hovland E
 Not started</td>
-      <td>Hideki Matsuyama E
+      <td>Shane Lowry E
+E thru 13</td>
+      <td class="greyout leftborder">Hideki Matsuyama E
 E thru 10</td>
-      <td class="greyout leftborder">Jon Rahm E
+      <td class="greyout">Jon Rahm E
 Not started</td>
-      <td class="greyout">Shane Lowry +2
-+2 thru 12</td>
     </tr>
     <tr>
       <td class="bigbold">Benjac</td>
       <td class="bigbold">-3</td>
       <td>Cameron Smith -2
--2 thru 10</td>
+-2 thru 11</td>
       <td>Sam Burns -1
 -1 thru 2</td>
       <td>Rory McIlroy E
@@ -513,27 +513,27 @@ Not started</td>
       <td>Scottie Scheffler -2
 -2 thru 9</td>
       <td>Corey Conners -1
--1 thru 5</td>
+-1 thru 6</td>
       <td>Brooks Koepka E
 Not started</td>
-      <td>Jordan Spieth E
+      <td>Shane Lowry E
+E thru 13</td>
+      <td class="greyout leftborder">Jordan Spieth E
 Not started</td>
-      <td class="greyout leftborder">Justin Thomas(W) +2
+      <td class="greyout">Justin Thomas(W) +2
 +2 thru 10</td>
-      <td class="greyout">Shane Lowry +2
-+2 thru 12</td>
     </tr>
     <tr>
       <td class="bigbold">Ron Harrington</td>
       <td class="bigbold">-3</td>
       <td>Cameron Smith -2
--2 thru 10</td>
+-2 thru 11</td>
       <td>Corey Conners -1
--1 thru 5</td>
+-1 thru 6</td>
       <td>Jon Rahm(W) E
 Not started</td>
       <td>Talor Gooch E
-E thru 13</td>
+E thru 14</td>
       <td class="greyout leftborder">Brooks Koepka E
 Not started</td>
       <td class="greyout">Hideki Matsuyama E
@@ -543,17 +543,17 @@ E thru 10</td>
       <td class="bigbold">Tom Davis</td>
       <td class="bigbold">-3</td>
       <td>Cameron Smith -2
--2 thru 10</td>
+-2 thru 11</td>
       <td>Corey Conners -1
--1 thru 5</td>
+-1 thru 6</td>
       <td>Dustin Johnson(W) E
 E thru 1</td>
       <td>Patrick Cantlay E
-Not started</td>
-      <td class="greyout leftborder">Shane Lowry +2
-+2 thru 12</td>
-      <td class="greyout">Louis Oosthuizen +2
-+2 thru 10</td>
+E thru 1</td>
+      <td class="greyout leftborder">Shane Lowry E
+E thru 13</td>
+      <td class="greyout">Louis Oosthuizen +3
++3 thru 11</td>
     </tr>
     <tr>
       <td class="bigbold">Neville Spillman</td>
@@ -565,7 +565,7 @@ Not started</td>
       <td>Jordan Spieth(W) E
 Not started</td>
       <td>Patrick Cantlay E
-Not started</td>
+E thru 1</td>
       <td class="greyout leftborder">Brooks Koepka E
 Not started</td>
       <td class="greyout">Jon Rahm E
@@ -577,7 +577,7 @@ Not started</td>
       <td>Scottie Scheffler -2
 -2 thru 9</td>
       <td>Patrick Cantlay E
-Not started</td>
+E thru 1</td>
       <td>Viktor Hovland E
 Not started</td>
       <td>Rory McIlroy E
@@ -593,15 +593,15 @@ Not started</td>
       <td>Scottie Scheffler -2
 -2 thru 9</td>
       <td>Patrick Cantlay E
-Not started</td>
+E thru 1</td>
       <td>Tony Finau E
-E thru 9</td>
-      <td>Will Zalatoris E
+E thru 10</td>
+      <td>Shane Lowry E
+E thru 13</td>
+      <td class="greyout leftborder">Will Zalatoris E
 Not started</td>
-      <td class="greyout leftborder">Justin Thomas(W) +2
+      <td class="greyout">Justin Thomas(W) +2
 +2 thru 10</td>
-      <td class="greyout">Shane Lowry +2
-+2 thru 12</td>
     </tr>
     <tr>
       <td class="bigbold">CRED</td>
@@ -611,7 +611,7 @@ Not started</td>
       <td>Brooks Koepka(W) E
 Not started</td>
       <td>Patrick Cantlay E
-Not started</td>
+E thru 1</td>
       <td>Dustin Johnson E
 E thru 1</td>
       <td class="greyout leftborder">Xander Schauffele E
@@ -625,7 +625,7 @@ E thru 9</td>
       <td>Scottie Scheffler -2
 -2 thru 9</td>
       <td>Patrick Cantlay E
-Not started</td>
+E thru 1</td>
       <td>Brooks Koepka E
 Not started</td>
       <td>Xander Schauffele E
@@ -655,9 +655,9 @@ Not started</td>
       <td class="bigbold">New Lu</td>
       <td class="bigbold">-2</td>
       <td>Cameron Smith -2
--2 thru 10</td>
+-2 thru 11</td>
       <td>Patrick Cantlay E
-Not started</td>
+E thru 1</td>
       <td>Brooks Koepka E
 Not started</td>
       <td>Xander Schauffele E
@@ -671,23 +671,23 @@ Not started</td>
       <td class="bigbold">Andrew Winchester</td>
       <td class="bigbold">-2</td>
       <td>Cameron Smith -2
--2 thru 10</td>
+-2 thru 11</td>
       <td>Matthew Fitzpatrick E
 Not started</td>
       <td>Brooks Koepka E
 Not started</td>
-      <td>Will Zalatoris E
+      <td>Shane Lowry E
+E thru 13</td>
+      <td class="greyout leftborder">Will Zalatoris E
 Not started</td>
-      <td class="greyout leftborder">Justin Thomas(W) +2
+      <td class="greyout">Justin Thomas(W) +2
 +2 thru 10</td>
-      <td class="greyout">Shane Lowry +2
-+2 thru 12</td>
     </tr>
     <tr>
       <td class="bigbold">Glitter Girl</td>
       <td class="bigbold">-2</td>
       <td>Cameron Smith -2
--2 thru 10</td>
+-2 thru 11</td>
       <td>Jon Rahm(W) E
 Not started</td>
       <td>Viktor Hovland E
@@ -719,17 +719,17 @@ Not started</td>
       <td class="bigbold">Baggy Pants</td>
       <td class="bigbold">-2</td>
       <td>Cameron Smith -2
--2 thru 10</td>
+-2 thru 11</td>
       <td>Patrick Cantlay E
-Not started</td>
+E thru 1</td>
       <td>Viktor Hovland E
 Not started</td>
       <td>Brooks Koepka E
 Not started</td>
-      <td class="greyout leftborder">Justin Thomas(W) +2
+      <td class="greyout leftborder">Shane Lowry E
+E thru 13</td>
+      <td class="greyout">Justin Thomas(W) +2
 +2 thru 10</td>
-      <td class="greyout">Shane Lowry +2
-+2 thru 12</td>
     </tr>
     <tr>
       <td class="bigbold">Wylie</td>
@@ -744,14 +744,14 @@ Not started</td>
 Not started</td>
       <td class="greyout leftborder">Justin Thomas(W) +2
 +2 thru 10</td>
-      <td class="greyout">Louis Oosthuizen +2
-+2 thru 10</td>
+      <td class="greyout">Louis Oosthuizen +3
++3 thru 11</td>
     </tr>
     <tr>
       <td class="bigbold">Jack Fleck</td>
       <td class="bigbold">-2</td>
       <td>Cameron Smith -2
--2 thru 10</td>
+-2 thru 11</td>
       <td>Rory McIlroy(W) E
 Not started</td>
       <td>Hideki Matsuyama E
@@ -759,7 +759,7 @@ E thru 10</td>
       <td>Xander Schauffele E
 Not started</td>
       <td class="greyout leftborder">Tiger Woods E
-E thru 10</td>
+E thru 11</td>
       <td class="greyout">Justin Thomas +2
 +2 thru 10</td>
     </tr>
@@ -769,7 +769,7 @@ E thru 10</td>
       <td>Daniel Berger -1
 -1 thru 12</td>
       <td>Patrick Cantlay E
-Not started</td>
+E thru 1</td>
       <td>Viktor Hovland E
 Not started</td>
       <td>Jon Rahm E
@@ -799,7 +799,7 @@ Not started</td>
       <td class="bigbold">Grace</td>
       <td class="bigbold">-1</td>
       <td>Corey Conners -1
--1 thru 5</td>
+-1 thru 6</td>
       <td>Xander Schauffele(W) E
 Not started</td>
       <td>Viktor Hovland E
@@ -815,7 +815,7 @@ Not started</td>
       <td class="bigbold">Brian McDonald</td>
       <td class="bigbold">-1</td>
       <td>Corey Conners -1
--1 thru 5</td>
+-1 thru 6</td>
       <td>Jon Rahm(W) E
 Not started</td>
       <td>Rory McIlroy E
@@ -831,7 +831,7 @@ Not started</td>
       <td class="bigbold">Jabby</td>
       <td class="bigbold">-1</td>
       <td>Corey Conners -1
--1 thru 5</td>
+-1 thru 6</td>
       <td>Brooks Koepka E
 Not started</td>
       <td>Rory McIlroy E
@@ -849,7 +849,7 @@ Not started</td>
       <td>Viktor Hovland(W) E
 Not started</td>
       <td>Patrick Cantlay E
-Not started</td>
+E thru 1</td>
       <td>Jon Rahm E
 Not started</td>
       <td>Xander Schauffele E
@@ -865,7 +865,7 @@ Not started</td>
       <td>Rory McIlroy(W) E
 Not started</td>
       <td>Patrick Cantlay E
-Not started</td>
+E thru 1</td>
       <td>Viktor Hovland E
 Not started</td>
       <td>Dustin Johnson E
@@ -886,10 +886,10 @@ Not started</td>
 Not started</td>
       <td>Xander Schauffele E
 Not started</td>
-      <td class="greyout leftborder">Louis Oosthuizen +2
+      <td class="greyout leftborder">Justin Thomas +2
 +2 thru 10</td>
-      <td class="greyout">Justin Thomas +2
-+2 thru 10</td>
+      <td class="greyout">Louis Oosthuizen +3
++3 thru 11</td>
     </tr>
     <tr>
       <td class="bigbold">Yellow in Augusta</td>
@@ -911,7 +911,7 @@ Not started</td>
       <td class="bigbold">Shane Hosegood</td>
       <td class="bigbold">0</td>
       <td>Patrick Cantlay E
-Not started</td>
+E thru 1</td>
       <td>Hideki Matsuyama E
 E thru 10</td>
       <td>Jon Rahm E
@@ -927,7 +927,7 @@ Out With Injury</td>
       <td class="bigbold">NewCastle Magpies</td>
       <td class="bigbold">0</td>
       <td>Patrick Cantlay E
-Not started</td>
+E thru 1</td>
       <td>Brooks Koepka E
 Not started</td>
       <td>Xander Schauffele E
@@ -961,7 +961,7 @@ Not started</td>
       <td>Jon Rahm(W) E
 Not started</td>
       <td>Patrick Cantlay E
-Not started</td>
+E thru 1</td>
       <td>Brooks Koepka E
 Not started</td>
       <td>Hideki Matsuyama E
@@ -975,7 +975,7 @@ Not started</td>
       <td class="bigbold">Ez Game Ez Life</td>
       <td class="bigbold">0</td>
       <td>Tiger Woods(W) E
-E thru 10</td>
+E thru 11</td>
       <td>Viktor Hovland E
 Not started</td>
       <td>Rory McIlroy E
@@ -1000,8 +1000,8 @@ Not started</td>
 Not started</td>
       <td class="greyout leftborder">Justin Thomas(W) +2
 +2 thru 10</td>
-      <td class="greyout">Louis Oosthuizen +2
-+2 thru 10</td>
+      <td class="greyout">Louis Oosthuizen +3
++3 thru 11</td>
     </tr>
     <tr>
       <td class="bigbold">Kash Ahmad</td>
@@ -1023,7 +1023,7 @@ Not started</td>
       <td class="bigbold">Hasbulla</td>
       <td class="bigbold">0</td>
       <td>Patrick Cantlay(W) E
-Not started</td>
+E thru 1</td>
       <td>Brooks Koepka E
 Not started</td>
       <td>Rory McIlroy E
@@ -1041,15 +1041,15 @@ Not started</td>
       <td>Dustin Johnson(W) E
 E thru 1</td>
       <td>Tony Finau E
-E thru 9</td>
+E thru 10</td>
       <td>Matthew Fitzpatrick E
 Not started</td>
-      <td>Jordan Spieth E
+      <td>Shane Lowry E
+E thru 13</td>
+      <td class="greyout leftborder">Jordan Spieth E
 Not started</td>
-      <td class="greyout leftborder">Shane Lowry +2
-+2 thru 12</td>
-      <td class="greyout">Louis Oosthuizen +2
-+2 thru 10</td>
+      <td class="greyout">Louis Oosthuizen +3
++3 thru 11</td>
     </tr>
     <tr>
       <td class="bigbold">Matt Tummon</td>
@@ -1057,7 +1057,7 @@ Not started</td>
       <td>Jordan Spieth(W) E
 Not started</td>
       <td>Patrick Cantlay E
-Not started</td>
+E thru 1</td>
       <td>Viktor Hovland E
 Not started</td>
       <td>Dustin Johnson E
@@ -1075,13 +1075,13 @@ Not started</td>
       <td>Rory McIlroy E
 Not started</td>
       <td>Tiger Woods E
-E thru 10</td>
+E thru 11</td>
       <td>Collin Morikawa(W) +1
 +1 thru 1</td>
       <td class="greyout leftborder">Justin Thomas +2
 +2 thru 10</td>
       <td class="greyout">Gary Woodland +2
-+2 thru 5</td>
++2 thru 6</td>
     </tr>
   </tbody>
 </table>
