--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 2:45:12 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 2:46:05 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -145,11 +145,11 @@ body {
       <td>Scottie Scheffler(W) -2
 -2 thru 9</td>
       <td>Cameron Smith -2
--2 thru 10</td>
+-2 thru 11</td>
       <td>Sam Burns -1
 -1 thru 2</td>
       <td>Corey Conners -1
--1 thru 5</td>
+-1 thru 6</td>
       <td class="greyout leftborder">Xander Schauffele E
 Not started</td>
       <td class="greyout">Jordan Spieth E
@@ -159,9 +159,9 @@ Not started</td>
       <td class="bigbold">Paxton Watson</td>
       <td class="bigbold">-4</td>
       <td>Cameron Smith -2
--2 thru 10</td>
+-2 thru 11</td>
       <td>Joaquin Niemann -2
--2 thru 10</td>
+-2 thru 11</td>
       <td>Viktor Hovland E
 Not started</td>
       <td>Rory McIlroy E
@@ -175,13 +175,13 @@ Not started</td>
       <td class="bigbold">Scott Williamson</td>
       <td class="bigbold">-3</td>
       <td>Sungjae Im -3
--3 thru 3</td>
+-3 thru 4</td>
       <td>Viktor Hovland(W) E
 Not started</td>
       <td>Brooks Koepka E
 Not started</td>
       <td>Patrick Cantlay E
-Not started</td>
+E thru 1</td>
       <td class="greyout leftborder">Collin Morikawa +1
 +1 thru 1</td>
       <td class="greyout">Justin Thomas +2
@@ -191,7 +191,7 @@ Not started</td>
       <td class="bigbold">Chris Sinclair</td>
       <td class="bigbold">-3</td>
       <td>Corey Conners(W) -1
--1 thru 5</td>
+-1 thru 6</td>
       <td>Daniel Berger -1
 -1 thru 12</td>
       <td>Robert MacIntyre -1
@@ -207,9 +207,9 @@ Not started</td>
       <td class="bigbold">Neil Hardy</td>
       <td class="bigbold">-3</td>
       <td>Cameron Smith(W) -2
--2 thru 10</td>
+-2 thru 11</td>
       <td>Corey Conners -1
--1 thru 5</td>
+-1 thru 6</td>
       <td>Viktor Hovland E
 Not started</td>
       <td>Xander Schauffele E
@@ -220,20 +220,36 @@ Not started</td>
 +2 thru 10</td>
     </tr>
     <tr>
+      <td class="bigbold">Derrick Shea</td>
+      <td class="bigbold">-2</td>
+      <td>Tyrrell Hatton -1
+-1 thru 2</td>
+      <td>Corey Conners -1
+-1 thru 6</td>
+      <td>Jon Rahm E
+Not started</td>
+      <td>Patrick Cantlay E
+E thru 1</td>
+      <td class="greyout leftborder">Shane Lowry E
+E thru 13</td>
+      <td class="greyout">Justin Thomas(W) +2
++2 thru 10</td>
+    </tr>
+    <tr>
       <td class="bigbold">Jon Hosegood</td>
       <td class="bigbold">-2</td>
       <td>Scottie Scheffler -2
 -2 thru 9</td>
       <td>Patrick Cantlay E
-Not started</td>
+E thru 1</td>
       <td>Will Zalatoris E
 Not started</td>
       <td>Tony Finau E
-E thru 9</td>
-      <td class="greyout leftborder">Justin Thomas(W) +2
+E thru 10</td>
+      <td class="greyout leftborder">Shane Lowry E
+E thru 13</td>
+      <td class="greyout">Justin Thomas(W) +2
 +2 thru 10</td>
-      <td class="greyout">Shane Lowry +2
-+2 thru 12</td>
     </tr>
     <tr>
       <td class="bigbold">Chris Bryson</td>
@@ -248,14 +264,14 @@ Not started</td>
 Not started</td>
       <td class="greyout leftborder">Will Zalatoris E
 Not started</td>
-      <td class="greyout">Shane Lowry +2
-+2 thru 12</td>
+      <td class="greyout">Shane Lowry E
+E thru 13</td>
     </tr>
     <tr>
       <td class="bigbold">John Nixon</td>
       <td class="bigbold">-2</td>
       <td>Cameron Smith(W) -2
--2 thru 10</td>
+-2 thru 11</td>
       <td>Brooks Koepka E
 Not started</td>
       <td>Xander Schauffele E
@@ -263,7 +279,7 @@ Not started</td>
       <td>Rory McIlroy E
 Not started</td>
       <td class="greyout leftborder">Patrick Cantlay E
-Not started</td>
+E thru 1</td>
       <td class="greyout">Collin Morikawa +1
 +1 thru 1</td>
     </tr>
@@ -271,48 +287,16 @@ Not started</td>
       <td class="bigbold">Andrew Winchester</td>
       <td class="bigbold">-2</td>
       <td>Cameron Smith -2
--2 thru 10</td>
+-2 thru 11</td>
       <td>Matthew Fitzpatrick E
 Not started</td>
       <td>Brooks Koepka E
 Not started</td>
-      <td>Will Zalatoris E
+      <td>Shane Lowry E
+E thru 13</td>
+      <td class="greyout leftborder">Will Zalatoris E
 Not started</td>
-      <td class="greyout leftborder">Justin Thomas(W) +2
-+2 thru 10</td>
-      <td class="greyout">Shane Lowry +2
-+2 thru 12</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Derrick Shea</td>
-      <td class="bigbold">-1</td>
-      <td>Corey Conners -1
--1 thru 5</td>
-      <td>Jon Rahm E
-Not started</td>
-      <td>Patrick Cantlay E
-Not started</td>
-      <td>Tyrrell Hatton E
-E thru 1</td>
-      <td class="greyout leftborder">Justin Thomas(W) +2
-+2 thru 10</td>
-      <td class="greyout">Shane Lowry +2
-+2 thru 12</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Jamie Watters</td>
-      <td class="bigbold">-1</td>
-      <td>Corey Conners -1
--1 thru 5</td>
-      <td>Xander Schauffele(W) E
-Not started</td>
-      <td>Dustin Johnson E
-E thru 1</td>
-      <td>Russell Henley E
-E thru 5</td>
-      <td class="greyout leftborder">Justin Thomas +2
-+2 thru 10</td>
-      <td class="greyout">Louis Oosthuizen +2
+      <td class="greyout">Justin Thomas(W) +2
 +2 thru 10</td>
     </tr>
     <tr>
@@ -325,7 +309,7 @@ Not started</td>
       <td>Will Zalatoris E
 Not started</td>
       <td>Tony Finau E
-E thru 9</td>
+E thru 10</td>
       <td class="greyout leftborder">Collin Morikawa +1
 +1 thru 1</td>
       <td class="greyout">Justin Thomas(W) +2
@@ -335,7 +319,7 @@ E thru 9</td>
       <td class="bigbold">Adam Ryan</td>
       <td class="bigbold">-1</td>
       <td>Corey Conners -1
--1 thru 5</td>
+-1 thru 6</td>
       <td>Jon Rahm E
 Not started</td>
       <td>Xander Schauffele E
@@ -344,8 +328,24 @@ Not started</td>
 Not started</td>
       <td class="greyout leftborder">Justin Thomas(W) +2
 +2 thru 10</td>
-      <td class="greyout">Louis Oosthuizen +2
+      <td class="greyout">Louis Oosthuizen +3
++3 thru 11</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Jamie Watters</td>
+      <td class="bigbold">0</td>
+      <td>Corey Conners -1
+-1 thru 6</td>
+      <td>Xander Schauffele(W) E
+Not started</td>
+      <td>Dustin Johnson E
+E thru 1</td>
+      <td>Russell Henley +1
++1 thru 6</td>
+      <td class="greyout leftborder">Justin Thomas +2
 +2 thru 10</td>
+      <td class="greyout">Louis Oosthuizen +3
++3 thru 11</td>
     </tr>
     <tr>
       <td class="bigbold">Jeff Turnham</td>
@@ -371,11 +371,11 @@ Not started</td>
       <td>Jordan Spieth E
 Not started</td>
       <td>Patrick Cantlay E
-Not started</td>
+E thru 1</td>
       <td>Brooks Koepka E
 Not started</td>
       <td class="greyout leftborder">Tony Finau E
-E thru 9</td>
+E thru 10</td>
       <td class="greyout">Collin Morikawa +1
 +1 thru 1</td>
     </tr>
@@ -385,7 +385,7 @@ E thru 9</td>
       <td>Jordan Spieth(W) E
 Not started</td>
       <td>Patrick Cantlay E
-Not started</td>
+E thru 1</td>
       <td>Viktor Hovland E
 Not started</td>
       <td>Dustin Johnson E
